--- a/BookMyShowDemo/Resources/Info.plist
+++ b/BookMyShowDemo/Resources/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>apiKey</key>
+	<string>${apiKey}</string>
+	<key>baseUrl</key>
+	<string>${baseUrl}</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
